--- a/layouts/partials/category-posts.html
+++ b/layouts/partials/category-posts.html
@@ -1,41 +1,40 @@
 <div class="pl-sm-4 ml-sm-5 pt-2">
     <div class="row">
         <div class="col-12">
-            {{ $recent := 7 }}
-            {{ if isset .Site.Params "recent_posts" }}
-                {{ $recent = .Site.Params.recent_posts }}
-            {{ end }}
-            {{ if gt $recent 0 }}
+            {{ range $key, $taxonomy := .Site.Taxonomies.categories.Alphabetical }}
             <div class="pb-3">
-                <h5><span class="badge category">Recent</span></h5>
-                <ul class="list-unstyled">
-                    {{ range first $recent (where .Site.RegularPages "Type" "in" site.Params.mainSections) }}
-                        <li>
-                            {{ .Date.Format "Jan 2 2006" }}
-                            <a href="{{ .Permalink }}">{{ .Title }}</a>
-                        </li>
+                <h5>
+                    <span class="badge category">
+                        {{ .Name }}
+                    </span>
+                </h5>
+                <ul class="list-unstyled inline-list">
+                    {{ range $taxonomy.Pages }}
+                    <li>
+                        <a href="{{ .Permalink }}">{{ .Title }}</a>
+                        <i>{{ .Date.Format "Jan 2 2006" }}</i>
+                    </li>
                     {{ end }}
                 </ul>
             </div>
             {{ end }}
-
-            {{ range $key, $taxonomy := .Site.Taxonomies.categories.Alphabetical }}
-                <div class="pb-3">
-                    <h5>
-                    <span class="badge category text-capitalize">
-                        {{ .Name | humanize }}
-                    </span>
-                    </h5>
-                    <ul class="list-unstyled">
-                        {{ range $taxonomy.Pages }}
-                            <li>
-                                {{ .Date.Format "Jan 2 2006" }}
-                                <a href="{{ .Permalink }}">{{ .Title }}</a>
-                            </li>
-                        {{ end }}
-                    </ul>
-                </div>
-            {{ end }}
         </div>
     </div>
 </div>
+
+<style>
+    .inline-list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 15px;
+        padding: 0;
+        list-style: none;
+    }
+
+    .inline-list li i {
+        font-size: 0.8em;
+        color: #888888;
+        opacity: 0.7;
+        margin-left: 5px;
+    }
+</style>
